src/index.css
@import "tailwindcss";

body {
  font-family: 'Inter', sans-serif;
}

:root {
  --background: #0f0f0f;
  --foreground: rgba(255, 255, 255, 0.9);
  --primary: #EA7300; 
  --accent: #ffc107;
  --neutral: #464646;
  --loader-primary:#fd7d1413;
  --loader-accent:#ffc10700;
} 


@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-neutral: var(--neutral);
  --color-accent: var(--accent);
}


body {
  background: var(--background);
}


body,html {
  margin: 0 !important;
  padding: 0 !important;
}

* {
  box-sizing: border-box !important;
}

@utility container {
  padding: 0px 0px;
  margin-inline: auto;

  @variant xl {
    width: 1240px;
  }
}



::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

::-webkit-scrollbar-track {
  background: var(--background);  
}

::-webkit-scrollbar-thumb {
  background-color: var(--primary); 
  border-radius: 6px;
  border: 3px solid #f0f0f0; 
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--primary); 
}

* {
  scrollbar-width: thin;          
  scrollbar-color: var(--primary) var(--background);
}


/* stepper ovveride */
.k-stepper {
  margin: 10px !important;
  padding: 0 !important;
  color: #fd7e14 !important;
}
.k-step {
  margin: 0 !important;
  padding: 0 !important;
  color: #fd7e14;
}
.k-step-label {
  margin-bottom: 15px  !important;
  color: white !important;
  font-weight: 500;
}

.k-step-current .k-step-indicator {
  background-color: rgb(0, 0, 0) !important; 
  border: none !important;
}

.k-step-done .k-step-indicator {
  background-color: var(--primary) !important;  
  border: none !important;
}

.k-step-optional {
  color: #005eff !important; 
}

.k-svg-icon {
  width: 20px !important;
  height: 20px !important;
}

